--- a/portfolio/src/components/nav/Nav.scss
+++ b/portfolio/src/components/nav/Nav.scss
@@ -1,4 +1,4 @@
-nav {
+.nav {
     max-width: 968px;
     height: var(--header-height);
     display: flex;
@@ -41,4 +41,31 @@ nav {
 .nav__list {
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+}
+
+.nav__close {
+    position: absolute;
+    right: 1.3rem;
+    bottom: .5rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: var(--first-color);
+}
+
+.nav__close {
+    color: var(--first-color-alt);
+}
+
+.show-menu {
+    bottom: 0;
+}
+
+/*Active link*/
+.active-link {
+    color: var(--first-color);
+}
+
+/* Change background header*/
+.scroll-header {
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
 }
